--- a/preset.html
+++ b/preset.html
@@ -149,28 +149,29 @@
 
 
 <script>
-
 const zoomTarget = document.getElementById("preset");
 const pedalboardSelect = document.getElementById("pedalboardSelect");
 
 const minZoom = 0.7;
 const maxZoom = 1.0;
 const step = 0.05;
-
 let zoomLevel = 1.0; // current pedalboard zoom
 
+// Get the selected pedalboard text
 function getPedalboardId() {
   const idx = pedalboardSelect.selectedIndex;
   if (idx < 0) return null;
   return pedalboardSelect.options[idx].text.trim();
 }
 
+// Save zoom for the current pedalboard
 function saveZoom() {
   const id = getPedalboardId();
   if (!id) return;
   localStorage.setItem(`zoom_${id}`, zoomLevel);
 }
 
+// Load zoom for the current pedalboard
 function loadZoom() {
   const id = getPedalboardId();
   if (!id) return;
@@ -178,12 +179,14 @@ function loadZoom() {
   zoomLevel = saved ? parseFloat(saved) : 1.0;
 }
 
+// Apply zoom to the element
 function applyZoom() {
   zoomTarget.style.transform = `scale(${zoomLevel})`;
   zoomTarget.style.transformOrigin = "top left";
   saveZoom();
 }
 
+// Zoom functions
 function zoomIn() {
   if (zoomLevel < maxZoom) {
     zoomLevel = Math.min(zoomLevel + step, maxZoom);
@@ -203,25 +206,29 @@ function resetZoom() {
   applyZoom();
 }
 
+// Called when changing pedalboards
 function onPedalboardChange() {
   loadZoom();
   applyZoom();
 }
 
-// Initialize zoom only after dropdown is populated
+// Initialize zoom only after the dropdown is populated
 function initPedalboardZoom() {
   if (!pedalboardSelect.options.length) return;
+
+  // Apply zoom for initially selected pedalboard
   loadZoom();
   applyZoom();
+
+  // Attach change listener
   pedalboardSelect.addEventListener('change', onPedalboardChange);
 }
 
-// Call this after your dropdown is filled
-// For example, at the end of initNavPreset() or initPreset():
+// Example: call this at the end of initNavPreset() or initPreset() 
+// after the pedalboardSelect is filled
 initPedalboardZoom();
-
-
 </script>
+
 
 
 </body>
