--- a/preset.html
+++ b/preset.html
@@ -37,7 +37,22 @@
   <div id="page-content">
     <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
       <select id="pedalboardSelect"></select>
-      <select id="presetSelect" style="margin-left: 16px;"></select>
+      <!-- <select id="presetSelect" style="margin-left: 16px;"></select> -->
+       <div id="presetSelectContainer" style="margin-left: 16px;">
+        <select id="presetSelect"></select>
+        <div id="presetSelectLoader" class="bx--inline-loading" style="display:none;" aria-live="assertive" role="alert">
+          <div class="bx--inline-loading__animation">
+            <div data-inline-loading-spinner class="bx--loading bx--loading--small">
+              <svg class="bx--loading__svg" viewBox="0 0 100 100">
+                <circle class="bx--loading__background" cx="50" cy="50" r="44"></circle>
+                <circle class="bx--loading__stroke" cx="50" cy="50" r="44"></circle>
+              </svg>
+            </div>
+          </div>
+          <p data-inline-loading-text-active class="bx--inline-loading__text">Loading presets...</p>
+        </div>
+      </div>
+
       <button id="renamePresetBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
     </div>
 
@@ -265,6 +280,16 @@ function showZoomSpinner() {
 
 function hideZoomSpinner() {
   document.getElementById("zoomSpinner").style.display = "none";
+}
+
+function showPresetLoader() {
+  document.getElementById("presetSelect").style.display = "none";
+  document.getElementById("presetSelectLoader").style.display = "flex";
+}
+
+function hidePresetLoader() {
+  document.getElementById("presetSelect").style.display = "inline-block";
+  document.getElementById("presetSelectLoader").style.display = "none";
 }
 </script>
 
