test loader preset

--- a/preset.html
+++ b/preset.html
@@ -37,8 +37,8 @@
   <div id="page-content">
     <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
       <select id="pedalboardSelect"></select>
-      <select id="presetSelect" style="margin-left: 16px;"></select>
-       <!-- <div id="presetSelectContainer" style="margin-left: 16px;">
+      <!-- <select id="presetSelect" style="margin-left: 16px;"></select> -->
+       <div id="presetSelectContainer" style="margin-left: 16px;">
         <select id="presetSelect"></select>
         <div id="presetSelectLoader" class="bx--inline-loading" style="display:none;" aria-live="assertive" role="alert">
           <div class="bx--inline-loading__animation">
@@ -51,7 +51,7 @@
           </div>
           <p data-inline-loading-text-active class="bx--inline-loading__text">Loading presets...</p>
         </div>
-      </div> -->
+      </div>
 
       <button id="renamePresetBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
     </div>
