--- a/preset.html
+++ b/preset.html
@@ -23,6 +23,15 @@
 </head>
 <body>
 
+  <div class="bx--loading-overlay" id="pageLoader" style="display:none;">
+      <div class="bx--loading" role="status">
+        <svg class="bx--loading__svg" viewBox="-75 -75 150 150">
+          <circle class="bx--loading__background" cx="0" cy="0" r="37.5"/>
+          <circle class="bx--loading__stroke" cx="0" cy="0" r="37.5"/>
+        </svg>
+      </div>
+    </div>
+
   <!-- <div id="loadingMessage" style="font-size:1.2em; text-align:center; margin-top: 2em; display: flex; flex-direction: column; align-items: center; gap: 0.5em;">
     <div class="bx--loading bx--loading--small" role="alert" aria-live="assertive" aria-label="Loading">
       <svg class="bx--loading__svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
