--- a/preset.html
+++ b/preset.html
@@ -31,16 +31,6 @@
         </svg>
       </div>
     </div>
-
-  <!-- <div id="loadingMessage" style="font-size:1.2em; text-align:center; margin-top: 2em; display: flex; flex-direction: column; align-items: center; gap: 0.5em;">
-    <div class="bx--loading bx--loading--small" role="alert" aria-live="assertive" aria-label="Loading">
-      <svg class="bx--loading__svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-        <circle class="bx--loading__background" cx="50" cy="50" r="44" stroke-width="8"></circle>
-        <circle class="bx--loading__stroke" cx="50" cy="50" r="44" stroke-width="8"></circle>
-      </svg>
-    </div>
-    Checking authentication...
-  </div> -->
   
   <!-- Main content area -->
   <div id="page-content">
@@ -155,7 +145,7 @@
       success: function(userFromServer) {
         $('#loadingMessage').hide();
         $('#page-content').show();
-        $('#preset-controls').show();
+        // $('#preset-controls').show();
 
         window.currentUser = userFromServer;
 
